--- a/game/game.vcxproj.filters
+++ b/game/game.vcxproj.filters
@@ -15,12 +15,15 @@
     <Filter Include="Game">
       <UniqueIdentifier>{816865a5-cea2-403d-9037-8792e051f308}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Game\Towers">
+      <UniqueIdentifier>{49d67948-4254-4580-a70c-8b0653577da9}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Game\Projectiles">
+      <UniqueIdentifier>{c267cc04-3dbc-4fd5-b6b8-ed49e6d1ae50}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
-      <Filter>Pliki źródłowe</Filter>
-    </ClCompile>
-    <ClCompile Include="Button.cpp">
       <Filter>Pliki źródłowe</Filter>
     </ClCompile>
     <ClCompile Include="Player.cpp">
@@ -61,6 +64,15 @@
     </ClCompile>
     <ClCompile Include="Stage.cpp">
       <Filter>Game</Filter>
+    </ClCompile>
+    <ClCompile Include="RocketTower.cpp">
+      <Filter>Game\Towers</Filter>
+    </ClCompile>
+    <ClCompile Include="Bullet.cpp">
+      <Filter>Game\Projectiles</Filter>
+    </ClCompile>
+    <ClCompile Include="Button.cpp">
+      <Filter>Pliki nagłówkowe</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -108,6 +120,12 @@
     </ClInclude>
     <ClInclude Include="Stage.h">
       <Filter>Game</Filter>
+    </ClInclude>
+    <ClInclude Include="RocketTower.h">
+      <Filter>Game\Towers</Filter>
+    </ClInclude>
+    <ClInclude Include="Bullet.h">
+      <Filter>Game\Projectiles</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
